# chronos-timer

./: .gitignore  LICENSE  README.md  pyproject.toml
chronos/: __init__.py  countdown.py  display.py  stopwatch.py
chronos_timer.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: __init__.py
